Fix styling on Safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,7 @@
     transform: translateY(0);
   }
 }
+
+.grid::after {
+  display: none;
+}
